RESOLVED FIXED275440
Web Inspector: Debugger: inline breakpoints aren't shown for comma sub-expressions
https://bugs.webkit.org/show_bug.cgi?id=275440
Summary Web Inspector: Debugger: inline breakpoints aren't shown for comma sub-expres...
Devin Rousso
Reported 2024-06-13 07:53:12 PDT
# STEPS TO REPRODUCE 1. inspect <https://devinrousso.com/demo/WebKit/inspector/inline.html> 2. put a breakpoint on line 15 (`true && (a(), b(), c()) && true;`) ## EXPECTED inline breakpoints are shown before `a()`, `b()`, and `c()` ## ACTUAL no inline breakpoints are shown
Attachments
Devin Rousso
Comment 1 2024-06-13 08:05:32 PDT
EWS
Comment 2 2024-06-17 17:19:21 PDT
Committed 280099@main (1ccd70cd2ef4): <https://commits.webkit.org/280099@main> Reviewed commits have been landed. Closing PR #29785 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2024-06-17 17:20:15 PDT
Note You need to log in before you can comment on or make changes to this bug.